--- a/lib/vim/secretary/views/projects.haml
+++ b/lib/vim/secretary/views/projects.haml
@@ -1,6 +1,9 @@
-%h1 Howdy
+.page-header
+  %h3 All Projects
 
 %ul
   - @projects.each do |project|
     %li
-      %a{href: "/projects/#{project.id}"}= project.name
+      %a{href: "/projects/#{project.id}"}
+        = project.name
+        (#{project.punches.size})
