Change the parser to use Treetop. Makes things _much_ easier

--- a/lib/vim/secretary/views/project.haml
+++ b/lib/vim/secretary/views/project.haml
@@ -7,5 +7,5 @@
       %a{href: "/punches/#{punch.id}"}
         = punch.created_at.to_s(:long)
         = '-'
-        = punch.notes.truncate(20)
+        = punch.description.truncate(40)
 
