Some basic styling. Calendar working 100%. We're getting there.
WRITE SOME DAMNED TESTS, TJ

--- a/lib/vim/secretary/views/_calender.haml
+++ b/lib/vim/secretary/views/_calender.haml
@@ -1,12 +1,8 @@
-#cal-heatmap
+#cal-heatmap{data: {:source => '/punches-for-calendar.json', 'collection-path' => '/punches.json'}}
 
-:javascript
-  var cal = new CalHeatMap();
-    cal.init({
-      data: "/punches-for-calendar.json?start={{d:start}}&end={{d:end}}",
-      start: new Date('#{(Time.now.beginning_of_month).to_s(:iso)}'),
-      domain: 'month',
-      subDomain: 'hour',
-      range: 1,
-      scale: [1, 4, 9, 15]
-    });
+.activity-listing
+  .activity-header
+    .activity-inner
+  .activity-list
+    %ul
+
