--- a/lib/vim/secretary/views/application.haml
+++ b/lib/vim/secretary/views/application.haml
@@ -4,12 +4,18 @@
   %head
     %title= timesheet_name
     %link{href: '/stylesheets/cal-heatmap.css', type: 'text/css', rel: 'stylesheet'}
-    %script{src: '/javascripts/d3.v3.min.js', charset: 'utf-8', type: 'application/javascript'}
-    %script{src: '/javascripts/cal-heatmap.js', type: 'application/javascript'}
+    %link{href: '/stylesheets/application.css', type: 'text/css', rel: 'stylesheet'}
+    %link{href: '/stylesheets/markdown.css', type: 'text/css', rel: 'stylesheet'}
 
+    %script{src: '/javascripts/d3.v3.min.js', charset: 'utf-8', type: 'application/javascript'}
+    %script{src: '/javascripts/cal-heatmap.min.js', type: 'application/javascript'}
   
 %h1= timesheet_name
 
 = yield
 
 = haml :_calender, layout: false
+
+%script{src: "http://code.jquery.com/jquery-2.0.3.min.js"}
+%script{src: '/javascripts/application.js', type: 'application/javascript'}
+
