--- a/lib/vim/secretary/views/application.haml
+++ b/lib/vim/secretary/views/application.haml
@@ -10,7 +10,7 @@
     %script{src: '/javascripts/d3.v3.min.js', charset: 'utf-8', type: 'application/javascript'}
     %script{src: '/javascripts/cal-heatmap.min.js', type: 'application/javascript'}
   
-%h1= timesheet_name
+%h1.center= timesheet_name
 
 = yield
 
