--- a/lib/vim/secretary/public/stylesheets/application.css
+++ b/lib/vim/secretary/public/stylesheets/application.css
@@ -21,3 +21,57 @@
   color: #333;
 }
 
+.center {
+  text-align: center;
+}
+
+.box {
+  width: 740px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  border: solid #d5d5d5;
+  border-width: 0 1px 1px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.box-inner {
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.box-header {
+  line-height: 2;
+  min-height: 2em;
+  background-color: #eaeaea;
+  background-image: -moz-linear-gradient(#fafafa, #eaeaea);
+  background-image: -webkit-linear-gradient(#fafafa, #eaeaea);
+  background-image: linear-gradient(#fafafa, #eaeaea);
+  background-repeat: repeat-x;
+  border: 1px solid #d5d5d5;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  text-align: center;
+}
+
+.box-header span {
+  padding: 0px 5px;
+  color: #555;
+  font-weight: bold;
+}
+
+ul {
+  list-style: none;
+  padding: 10px;
+}
+
+ul li {
+  border-bottom: 1px solid #aaa;
+  margin-bottom: 5px;
+}
+
+ul a {
+  text-decoration: none
+}
