--- a/lib/vim/secretary/views/projects.haml
+++ b/lib/vim/secretary/views/projects.haml
@@ -1,9 +1,10 @@
-.page-header
-  %h3 All Projects
-
-%ul
-  - @projects.each do |project|
-    %li
-      %a{href: "/projects/#{project.id}"}
-        = project.name
-        (#{project.punches.size})
+.box
+  .box-header
+    %span All Projects
+  .box-inner
+    %ul
+      - @projects.each do |project|
+        %li
+          %a{href: "/projects/#{project.id}"}
+            = project.name
+            (#{project.punches.size})
