DOH! Actually need to do something with comments.
Also scoped the unordered-list styling to just inside .box

--- a/lib/vim/secretary/public/stylesheets/application.css
+++ b/lib/vim/secretary/public/stylesheets/application.css
@@ -62,16 +62,16 @@
   font-weight: bold;
 }
 
-ul {
+.box ul {
   list-style: none;
   padding: 10px;
 }
 
-ul li {
+.box ul li {
   border-bottom: 1px solid #aaa;
   margin-bottom: 5px;
 }
 
-ul a {
+.box ul a {
   text-decoration: none
 }
