--- a/lib/vim/secretary/public/stylesheets/application.css
+++ b/lib/vim/secretary/public/stylesheets/application.css
@@ -79,3 +79,38 @@ span.project-name {
 .box ul a {
   text-decoration: none
 }
+
+/* AutoComplete */
+.search-bar {
+  width: 25%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1em;
+}
+
+input.search + .result {
+  position:absolute;
+  width:350px;
+  display:none;
+  overflow:hidden;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+  -moz-border-bottom-right-radius: 6px;
+  -moz-border-bottom-left-radius: 6px;
+  box-shadow: 0px 0px 5px #999;
+  border-color: #333 #DEDEDE #DEDEDE;
+  background-color: white;
+}
+
+.result .display-box {
+  padding: 4px;
+  border-top: solid 1px #dedede; 
+  line-height: 2em;
+  height: 2em;
+}
+
+.result .display-box:hover {
+  background: #eaeaea;
+  color: #000;
+  cursor: pointer;
+}
